# template_repositorio_cpp

./: CMakeLists.txt  README.md
cmake/: AddProjectTest.cmake  ConvenienceTargets.cmake
docs/: cmake_workflow.md
tests/: CMakeLists.txt  greeting_test.cpp
